--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <a href="github.com/arbanhossain/valorant-heatmap-frontend">GitHub</a>
+    <a href="#">github.com/arbanhossain/valorant-heatmap-frontend</a>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
